--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -99,7 +99,28 @@
         width: 35%
     .slider-content__text
         font-size: 12px
+    .sm-hidden
+        display: none
+    .sm-block
+        display: block
+    .hamburger
+        position: absolute
+        bottom: 0
+    .nav__menu_small
+        position: absolute
+        bottom: -160%
+        background-color: #353436
+        padding: 10px 15px
+        border-radius: 5px
+    .menu__item_li_small
+        display: block
+        margin: 0
+    .submenu__item_small
+        display: block
+    .submenu__link_small
+        font-size: 12px
 
 @media screen and (max-width: 576px)
     .container
-        width: unset
+        width: 90%
+   
