--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -38,6 +38,7 @@ button
 	font-weight: 400
 	font-size: 18px
 	width: 100%
+	cursor: pointer
 	&:active
 		transition: all .2s ease
 		background-color: $accent
@@ -508,6 +509,12 @@ body
 
 .h-100vh
 	height: 100vh
+
+.lg-hidden
+	display: none
+
+.d-none
+	display: none
 // Конец: Служебные классы
 
 // Начало: Настройка плагина bxSlider.js
