--- a/app/sass/_libs.sass
+++ b/app/sass/_libs.sass
@@ -1,7 +1,4 @@
-//@import "../../node_modules/bootstrap/scss/bootstrap-reboot.scss" // Bootstrap Reboot collection
-//@import "../../node_modules/bootstrap/scss/mixins/_breakpoints.scss" // Bootstrap Breakpoints mixin
-@import "../../node_modules/bxslider/dist/jquery.bxslider" 
-// @import "../../node_modules/bootstrap/scss/bootstrap-grid.scss" // Optional Bootstrap Grid
-// @import "../../node_modules/bootstrap/scss/utilities/_sizing.scss" // Optional Bootstrap Utilites
 
-// @import "../../node_modules/normalize.css/normalize.css" // CSS library plug-in example (npm i --save-dev normalize.css)
+@import "../../node_modules/bxslider/dist/jquery.bxslider" 
+@import "../../node_modules/hamburgers/dist/hamburgers.min" 
+
